--- a/ToolsHome/ToolsHome/Views/ToDo.xaml
+++ b/ToolsHome/ToolsHome/Views/ToDo.xaml
@@ -5,12 +5,12 @@
              Title="ToDo">
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Nueva Tarea"
+        <ToolbarItem Text="Tareas" 
                      Order="Primary"
-                     Clicked="ToolbarItem_Clicked"/>
+                     Clicked="ToolbarItem_Clicked" />
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <StackLayout VerticalOptions="CenterAndExpand" BackgroundColor="Aqua" >
+        <StackLayout HorizontalOptions="CenterAndExpand" BackgroundColor="Aqua" >
         <CollectionView x:Name="cvTareas">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
@@ -20,12 +20,15 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
+
+                                <CheckBox HorizontalOptions="Start" Color="Red" />
                                 <Label Text="{Binding Descripcion}" FontSize="16" TextColor="#333333" FontAttributes="Bold" Margin="15,15"  BackgroundColor="#00FF00"/>
-                            <StackLayout Grid.Row="1" Margin="0,10,0,0">
+                                <StackLayout Grid.Row="1" Margin="0,10,0,0">
                                     <Label Text="{Binding Estado}" FontSize="16" TextColor="#000000"/>
                                     <Label Text="{Binding FechaRegistro, StringFormat='Fecha: {0:dd/MM/yyyy}'}" FontSize="16" TextColor="#000000" />
-                            </StackLayout>
-                        </Grid>
+                                </StackLayout>
+
+                            </Grid>
                     </Frame>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
