--- a/ToolsHome/ToolsHome/Views/HomePage.xaml
+++ b/ToolsHome/ToolsHome/Views/HomePage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                    x:Class="ToolsHome.Views.HomePage">
 <ContentPage.Content>
-    <StackLayout Margin="50,20">
+    <StackLayout Orientation="Horizontal">
         <Label Text="¡W E L C O M E   T O T O O L S   H O M E!"
             HorizontalOptions="CenterAndExpand" 
             TextColor="{StaticResource colorAccent}"/>
